<resources translatable="false">
    <string name="app_name">Biggee</string>
    <string name="following">Following</string>
    <string name="for_you">For You</string>
    <string name="follow">Follow</string>
    <string name="create_account">Create Account Login to\nBiggee</string>
    <string name="create_a_profile_follow">Create a profile follow other profiles, make\nyour own videos and more</string>
    <string name="create_account_login">Create Account/Login</string>
    <string name="send_oto_verify_text">We will send you an OTP to verify your phone number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="challenges">Challenges</string>
    <string name="facebook_app_id">975705920277402</string>
    <string name="rate_very_slow">very slow</string>
    <string name="rate_slow">Slow</string>
    <string name="rate_standard">Standard</string>
    <string name="rate_fast">Fast</string>
    <string name="rate_very_fast">very fast</string>
    <string name="filter">filter</string>
    <string name="music">Music</string>
    <string name="gif">Gift</string>
    <string name="subtitle">subtitle</string>
    <string name="mv">MV</string>
    <string name="sound">sound effect</string>
    <string name="effect">Special effects</string>
    <string name="chat">Chat</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="copy_link">Copy Link</string>
    <string name="embed">Embed</string>
    <string name="snapchat">Snapchat</string>
    <string name="twitter">Twitter</string>
    <string name="more">More</string>
    <string name="download">Download</string>
    <string name="watch_later">Watch Later</string>
    <string name="not_interested">Not \n Interested</string>
    <string name="report">Report</string>
    <string name="duet">Duet</string>
    <string name="share">Share</string>
    <string name="boost_post">Boost Post</string>
    <string name="speed_time">Variable speed</string>
    <string name="transition">Transition</string>
    <string name="paint">Graffiti</string>
    <string name="cover">cover</string>
    <string name="smoother">Smoother</string>
    <string name="effect_tip">After selecting the position, press and hold to use the effect</string>
    <string name="undo">Undo</string>
    <string name="split_screen">split screen</string>
    <string name="available_balance">Available balance:</string>
    <string name="usable_amount">Usable Amount</string>
    <string name="joining_amount">Joining Amount</string>
    <string name="dream">Dream</string>
    <string name="dynamic">dynamic</string>
    <string name="caption_effect_font_category_name">plain text</string>
    <string name="caption_effect_bottom_keyboard">Keyboard</string>
    <string name="caption_effect_bottom_color">color</string>
    <string name="caption_effect_bottom_font">font</string>
    <string name="caption_effect_bottom_animation">special effects</string>
    <string name="text_count_outof">The number of characters exceeds the limit</string>
    <string name="subtitle_text_color">Fill</string>
    <string name="version_info" formatted="false">v%s (%d)</string>
    <string name="lens_groups">Lens groups</string>
    <string name="subtitle_text_stroke">stroke</string>
    <string name="reset">Reset</string>
    <string name="share_video">Share video</string>
    <string name="share_image">Share image</string>
    <string name="lock_portrait_orientation">lock_portrait_orientation</string>
    <string name="mini_preview_off">Mini Preview OFF</string>
    <string name="mini_preview_on">Mini Preview ON</string>
    <string name="capture_photo_off">Photo Capture OFF</string>
    <string name="capture_photo_on">Photo Capture ON</string>
    <string name="ring_flash_off">Ring Flash OFF</string>
    <string name="ring_flash_on">Ring Flash ON</string>
    <string name="custom_lenses_carousel_off">Custom Carousel OFF</string>
    <string name="custom_lenses_carousel_on">Custom Carousel ON</string>
    <string name="mute_audio_off">Mute Audio OFF</string>
    <string name="transition_shared_dummy">transition_shared_dummy</string>
    <string name="camera_kit_unsupported">CameraKit is not supported on this device</string>
    <string name="camera_kit_error">Error in Camera Kit</string>
    <string name="required_permissions_not_granted">Required permissions not granted by the user: %s</string>
    <string name="mute_audio_on">Mute Audio ON</string>
    <string name="diagnostics_off">Diagnostics OFF</string>
    <string name="diagnostics_on">Diagnostics ON</string>
    <string name="dump_diagnostics">Dump</string>
    <string name="prefetch_lenses">Prefetch lenses</string>
    <string name="update_lens_groups">Update lens groups</string>
    <string name="trigger_legal_prompt">Trigger legal prompt</string>
    <string-array name="preview_render_preference">
        <item>FIT</item>
        <item>CROP</item>
    </string-array>
    <string-array name="preview_render_value_preference">
        <item>"FIT"</item>
        <item>"CROP"</item>
    </string-array>
    <string-array name="preview_resolution">
        <item>1080P</item>
        <item>720P</item>
    </string-array>
    <string-array name="record_resolution">
        <item>1080P</item>
        <item>720P</item>
        <item>540P</item>
        <item>480P</item>
        <item>360P</item>
    </string-array>
    <string-array name="frame_rate">
        <item>30</item>
        <item>25</item>
        <item>24</item>
        <item>20</item>
        <item>15</item>
    </string-array>
    <string-array name="channels">
        <item>2</item>
        <item>1</item>
    </string-array>
    <string-array name="sample_rate">
        <item>48000</item>
        <item>44100</item>
        <item>22050</item>
    </string-array>
    <string-array name="india_states">
        <item>Select State</item>
        <item>Andaman and Nicobar Islands</item>
        
        <item>Arunachal Pradesh</item>
        
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu &amp; Kashmir</item>
        <item>Jharkhand</item>
        
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        
        
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        
        <item>Tamil Nadu</item>
        
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="snap_kit_scopes">
        <item>https://auth.snapchat.com/oauth2/api/camkit_lens_push_to_device</item>
    </string-array>
    <string name="contest_participant_content">
    \u25CF The Biggee platform, conducts various contest on Biggee,  The contests conducted by Biggee allows the users to participate by  their own Video. the individual users are rewarded with  on the basis of the performance of Total Vote. The user whose Video attains the highest aggregate of Vote will be declared as the winner of the contest. Biggee is authorized to declare more than one Winner, and distribute prizes to such Winners in increasing order of their Votes. At the end of the designated round(s) of the Contests in the event of various pre-specified contest(s). The Contest(s) organized would comply to the Terms and Conditions, rules and regulations mentioned below \n\n
    \u25CF Biggee presently offers paid versions  of the contests where the users can participate by paying a pre-defined amount on the relevant Contest page as a part of contests entry fee. An individual with the highest aggregate of (Vote) scores  at the end of the pre-determined round would be eligible for winning a pre-designated prize, as stated on the relevant Contest(s) page. \n\n
    \u25CF The victory of the contestant participating in the competition will be based on the total votes of the viewers. Biggee announces the winners on the based of total votes of the audience. The audience vote will be the final decision for all the winners. There will be no interference by Biggie in this.\n\n
    \u25CF An individual is authorized to participate in any multiple contest(s) conducted by the Biggee platform.\n\n
    \u25CF Every user is allowed only one entry in any Free Entry-based Prize Money or Prize Item room. You are not allowed to enter our rooms using multiple accounts.
    </string>
    <string name="contest_instruction_content">
    \u25CF Participants playing the paid formats of the Contests confirm that, they have read  our terms &amp; Condition.  If it is found that  Participant has used of other videos, and any illegal or Sexual video has posted. Biggee shall disqualify such Participant and forfeit any prize won by such Participant Further Biggee may, at its sole and absolute discretion, suspend or terminate such Participant account with Biggee. After Terminate the Id, Biggee is not responsible for  ID ,wallet and other Biggee is not bounded to Reopen the ID \n\n
    \u25CF If it is found that a Participant playing the paid formats of the Contests is under the age of eighteen (18), Biggee shall be entitled, at its sole and absolute discretion, to disqualify such Participant and forfeit his/her prize. Further, Biggee may, at its sole and absolute discretion, suspend or terminate such Participants account. To the extent permitted by law, Biggee makes no representations or warranties as to the quality; suitability or merchantability of any prizes and shall not be liable in respect of the same. \n\n
    \u25CF If any report or complaint is received from users regarding use the his/her content. After that Company will cross Check the both Users ID, and  reply in  30 working days. After that Biggee  Managements will take the final decision. And as per the mention in our Terms &amp; Condition, If any User has found use the other content, Then Company can be deactivat the Users ID. After that User are not eligible for claim the wallet balance and reopen the ID. In This types Situation, if any User has win the prizes, through used of other content. And received the complaint to Company, regarding use of other content. Then Biggee will be tack the action after cross check. But Biggee is not responsible for prizes. Because every users are responsible for save the self-content. The decision of Biggee Management shall be final and binding in case of any dispute
    </string>
</resources>