<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/bgColorRed"
        android:textSize="@dimen/_15sdp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:id="@+id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView style="@style/cardview_share">

                            <ImageView
                                android:id="@+id/iv_share_chat"
                                style="@style/imageview_share"
                                android:src="@drawable/share_chat" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/textview_share"
                            android:text="@string/chat" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView style="@style/cardview_share">

                            <ImageView
                                android:id="@+id/iv_share_whatsapp"
                                style="@style/imageview_share"
                                android:src="@drawable/share_whatsapp"

                                />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/textview_share"
                            android:text="@string/whatsapp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView style="@style/cardview_share">

                            <ImageView
                                android:id="@+id/iv_share_facebook"
                                style="@style/imageview_share"
                                android:src="@drawable/share_facebook" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/textview_share"

                            android:text="@string/facebook" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView style="@style/cardview_share">

                            <ImageView
                                android:id="@+id/iv_share_instagram"
                                style="@style/imageview_share"
                                android:src="@drawable/share_instagram" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/textview_share"

                            android:text="@string/instagram" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView style="@style/cardview_share">

                            <ImageView
                                android:id="@+id/iv_share_link"
                                style="@style/imageview_share"
                                android:src="@drawable/share_link" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/textview_share"

                            android:text="@string/copy_link" />


                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_below="@id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView style="@style/cardview_share">

                            <ImageView
                                style="@style/imageview_share"

                                android:src="@drawable/share_embed" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/textview_share"

                            android:text="@string/embed" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView style="@style/cardview_share">

                            <ImageView
                                android:id="@+id/iv_share_snapchat"
                                style="@style/imageview_share"
                                android:src="@drawable/share_snapchat" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/textview_share"

                            android:text="@string/snapchat" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView style="@style/cardview_share">

                            <ImageView
                                android:id="@+id/iv_share_twitter"
                                style="@style/imageview_share"
                                android:src="@drawable/share_twitter" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/textview_share"

                            android:text="@string/twitter" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView style="@style/cardview_share">

                            <ImageView
                                android:id="@+id/iv_share_more"
                                style="@style/imageview_share"
                                android:src="@drawable/share_more" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            style="@style/textview_share"

                            android:text="@string/more" />


                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>




        </LinearLayout>

    </HorizontalScrollView>
</LinearLayout>