<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="@color/bgColorRed"
        android:textSize="@dimen/_15sdp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@color/bgColorRed" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/iv_share_download"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6sdp"
            android:layout_weight="1"
            android:background="@drawable/share_download"
            android:orientation="horizontal"
            android:weightSum="1.5">

            <ImageView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:src="@drawable/ic_download" />

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/download"
                android:textColor="@color/white"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iv_share_watch_later"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6sdp"
            android:layout_weight="1"
            android:background="@drawable/share_download"
            android:orientation="horizontal"
            android:weightSum="1.5">

            <ImageView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:src="@drawable/ic_saved" />

            <TextView
                android:id="@+id/tv_watch_later"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/watch_later"
                android:textColor="@color/white"

                />

        </LinearLayout>

    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:visibility="gone"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView style="@style/cardview_share">

                    <ImageView
                        android:id="@+id/iv_share_duet"
                        style="@style/imageview_share"
                        android:src="@drawable/share_duet" />

                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/textview_share"
                    android:text="@string/duet"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView style="@style/cardview_share">

                    <ImageView
                        android:id="@+id/iv_share_not_intersested"
                        style="@style/imageview_share"
                        android:src="@drawable/share_not_intersested" />

                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/textview_share"
                    android:text="@string/not_interested" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView style="@style/cardview_share">

                    <ImageView
                        android:id="@+id/iv_share_report"
                        style="@style/imageview_share"
                        android:src="@drawable/share_report"
                        />

                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/textview_share"
                    android:text="@string/report"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/boost_post"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView style="@style/cardview_share">

                    <ImageView
                        style="@style/imageview_share"
                        android:src="@drawable/boost_post_draw" />

                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/textview_share"
                    android:text="@string/boost_post"
                    />


            </LinearLayout>


        </LinearLayout>

    </HorizontalScrollView>


</LinearLayout>