<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottom_sheet1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_2sdp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="Join Contest"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/available_balance"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/availableBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/usable_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/bonus_amount"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:text="(Bonus : 0)"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp" />

                    <TextView
                        android:id="@+id/usableBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/joining_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/entryFee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginVertical="5dp"
                    android:text="Join Amount will be deducted after uploading video successfully."
                    android:gravity="center"
                    android:paddingVertical="@dimen/_6sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:id="@+id/btnJoinContest"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="Join Contest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_button"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/textColorWhite"
                    android:textSize="16sp" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>